2013-10-04  Will Newton  <will.newton@linaro.org>

	* emulparams/aarch64elf.sh: Add IREL_IN_PLT.
	* emulparams/aarch64elf32.sh: Likewise.

2013-09-20  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2013-09-18  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add marker for 2.24.

2013-09-17  Nick Clifton  <nickc@redhat.com>

	PR ld/15957
	* deffilep.y (def_file_add_directive): Avoid readin past end of
	buffer.

2013-08-28  Nick Clifton  <nickc@redhat.com>

	PR ld/15896
	* ld.texinfo: Fix uses of MB abbreviation.

2013-08-26  Roland McGrath  <mcgrathr@google.com>

	* emulparams/elf_i386_nacl.sh (ARCH): Set to i386:nacl.
	* emulparams/elf_x86_64_nacl.sh (ARCH): Set to i386:x86-64:nacl.
	* emulparams/elf32_x86_64_nacl.sh (ARCH): Set to i386:x64-32:nacl.

2013-08-23  Roland McGrath  <mcgrathr@google.com>

	* emulparams/elf_nacl.sh (nacl_rodata_addr): Don't add in
	SIZEOF_HEADERS here; elf.sc does it already.

2013-08-23  Nick Clifton  <nickc@redhat.com>

	PR ld/15839
	* scripttempl/avr.sc: Do not include gc'able sections into general
	sections during relocatable links.

2013-08-22  Christian Franke  <franke@computer.org>

	* emultempl/pe.em: Add --disable-large-address-aware option.
	* ld.texinfo (--disable-large-address-aware): Add documentation.

2013-08-14  Clemens Lang  <clemens.lang@fau.de>

	* ldexp.c: Add LOG2CEIL() builtin function to linker script language
	* ldgram.y: Likewise
	* ldlex.l: Likewise
	* NEWS: Mention the new feature.
	* ld.texinfo: Document the new feature.

2013-07-19  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* ldgram.y: Add ALIGN_WITH_INPUT output section attribute.
	* ldlang.c: Likewise.
	* ldlang.h: Likewise.
	* ldlex.l: Likewise.
	* mri.c: Likewise.
	* ld.texinfo: Document new feature.
	* NEWS: Mention new feature.

2013-07-18  Roland McGrath  <mcgrathr@google.com>

	* emultempl/armelf.em (elf32_arm_add_stub_section): Take third
	argument ALIGNMENT_POWER, use it instead of constant 3.
